--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "concurrently": "^7.0.0",
+    "crypto-js": "^4.1.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "mssql": "^8.0.2",
