--- a/chat_pu/package.json
+++ b/chat_pu/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.18.6",
     "axios": "^0.25.0",
     "http-proxy-middleware": "^2.0.3",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -20,6 +21,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
