--- a/chat_pu/package.json
+++ b/chat_pu/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.25.0",
     "http-proxy-middleware": "^2.0.3",
     "moment": "^2.29.1",
+    "rc-virtual-list": "^3.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-new-window": "^0.2.1",
