--- a/chat_pu/package.json
+++ b/chat_pu/package.json
@@ -15,11 +15,11 @@
     "rc-virtual-list": "^3.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.34.0",
     "react-new-window": "^0.2.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "react-scroll-to-bottom": "^4.2.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
