--- a/chat_pu/package.json
+++ b/chat_pu/package.json
@@ -15,8 +15,10 @@
     "rc-virtual-list": "^3.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroller": "^1.2.6",
     "react-intersection-observer": "^8.34.0",
     "react-new-window": "^0.2.1",
+    "react-query": "^3.39.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -27,7 +29,8 @@
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "zustand": "^4.0.0-rc.1"
   },
   "scripts": {
     "start": "react-scripts start",
